Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-14 02:20+0000\n"
+"POT-Creation-Date: 2022-01-19 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,6 +64,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:148
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:175
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:202
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:267
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -114,6 +115,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:151
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:178
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:205
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:270
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -141,6 +143,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:211
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:220
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:248
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:276
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -459,23 +462,47 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:260
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:261
 #, no-wrap
 msgid "`no timeout`"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:266
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive.shared]]`link:#quarkus-datasource-data-sources-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive.shared[quarkus.datasource.\"datasource-name\".reactive.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set to true to share the pool among datasources. There can be multiple shared pools distinguished by name, when no specific name is set, the `__vertx.DEFAULT` name is used.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:275
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive.name]]`link:#quarkus-datasource-data-sources-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive.name[quarkus.datasource.\"datasource-name\".reactive.name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set the pool name, used when the pool is shared among datasources, otherwise ignored.\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:264
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:282
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:268
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:286
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:272
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:290
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
