--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-authentication.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-02 02:22+0000\n"
+"POT-Creation-Date: 2022-01-19 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -255,7 +255,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"If this property is set to 'true' then an OIDC UserInfo endpoint will be called\n"
+"If this property is set to 'true' then an OIDC UserInfo endpoint will be called.\n"
 "--"
 msgstr ""
 
@@ -307,7 +307,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Requires that ID token is available when the authorization code flow completes. In most case this property should be enabled. Disable this property only when you need to use the authorization code flow with OAuth2 providers.\n"
+"Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token.\n"
 "--"
 msgstr ""
 
@@ -482,7 +482,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"If this property is set to 'true' then an OIDC UserInfo endpoint will be called\n"
+"If this property is set to 'true' then an OIDC UserInfo endpoint will be called.\n"
 "--"
 msgstr ""
 
@@ -518,7 +518,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Requires that ID token is available when the authorization code flow completes. In most case this property should be enabled. Disable this property only when you need to use the authorization code flow with OAuth2 providers.\n"
+"Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token.\n"
 "--"
 msgstr ""
 
