--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-14 02:20+0000\n"
+"POT-Creation-Date: 2022-01-19 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -61,6 +61,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:134
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:161
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:188
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:253
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -92,6 +93,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:137
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:164
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:191
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:256
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -119,6 +121,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:197
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:206
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:234
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:262
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -437,23 +440,47 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:246
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:247
 #, no-wrap
 msgid "`no timeout`"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:252
+#, no-wrap
+msgid ""
+"[[quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config_quarkus.datasource.-datasource-name-.reactive.shared]]`link:#quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config_quarkus.datasource.-datasource-name-.reactive.shared[quarkus.datasource.\"datasource-name\".reactive.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set to true to share the pool among datasources. There can be multiple shared pools distinguished by name, when no specific name is set, the `__vertx.DEFAULT` name is used.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:261
+#, no-wrap
+msgid ""
+"[[quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config_quarkus.datasource.-datasource-name-.reactive.name]]`link:#quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config_quarkus.datasource.-datasource-name-.reactive.name[quarkus.datasource.\"datasource-name\".reactive.name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set the pool name, used when the pool is shared among datasources, otherwise ignored.\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:250
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:268
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:254
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:272
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:258
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-build-time-config-data-source-reactive-outer-named-build-time-config.adoc:276
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
