--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-14 02:21+0000\n"
+"POT-Creation-Date: 2022-01-19 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -60,6 +60,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:125
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:152
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:179
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:244
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -73,6 +74,7 @@ msgstr "boolean"
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:128
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:155
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:182
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:247
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -100,6 +102,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:188
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:197
 #: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:225
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:253
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -417,24 +420,48 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:237
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:238
 #, no-wrap
 msgid "`no timeout`"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:243
+#, no-wrap
+msgid ""
+"[[quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config_quarkus.datasource.-datasource-name-.reactive.shared]]`link:#quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config_quarkus.datasource.-datasource-name-.reactive.shared[quarkus.datasource.\"datasource-name\".reactive.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set to true to share the pool among datasources. There can be multiple shared pools distinguished by name, when no specific name is set, the `__vertx.DEFAULT` name is used.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:252
+#, no-wrap
+msgid ""
+"[[quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config_quarkus.datasource.-datasource-name-.reactive.name]]`link:#quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config_quarkus.datasource.-datasource-name-.reactive.name[quarkus.datasource.\"datasource-name\".reactive.name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set the pool name, used when the pool is shared among datasources, otherwise ignored.\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:241
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:259
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:245
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:263
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:249
+#: upstream/_generated-config/main/config/quarkus-reactive-datasource-config-group-data-sources-reactive-runtime-config-data-source-reactive-outer-named-runtime-config.adoc:267
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
