--- a/l10n/po/ja_JP/_versions/main/guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/infinispan-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2022-01-19 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -104,7 +104,7 @@ msgstr "Infinispan クライアントは、 `src/main/resources` ディレクト
 
 #. type: Plain text
 #: upstream/_versions/main/guides/infinispan-client.adoc:50
-msgid "Note that Infinispan documentation refers to a `hotrod-client.properties` file.  You can configure the Infinispan client with either properties file but `hotrod-client.properties` always takes priority over `application.properties`."
+msgid "Note that Infinispan documentation refers to a `hotrod-client.properties` file.  You can configure the Infinispan client with either properties file but `application.properties` always takes priority over `hotrod-client.properties`."
 msgstr ""
 
 #. type: Plain text
