--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-09 02:18+0000\n"
+"POT-Creation-Date: 2022-01-20 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,6 +57,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:44
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:53
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:62
+#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:71
 #, no-wrap
 msgid "string"
 msgstr ""
@@ -89,6 +90,18 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:34
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.binding]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.binding[quarkus.kubernetes-service-binding.services.\"services\".binding]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The name of the service binding. If no value is specified the id of the service will be used instead.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:43
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.kind]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.kind[quarkus.kubernetes-service-binding.services.\"services\".kind]`\n"
 "\n"
 "[.description]\n"
@@ -98,14 +111,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:38
-#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:47
-#, no-wrap
-msgid "required icon:exclamation-circle[title=Configuration property is required]"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:43
+#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:52
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.api-version]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.api-version[quarkus.kubernetes-service-binding.services.\"services\".api-version]`\n"
@@ -117,7 +123,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:52
+#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:61
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.name]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.name[quarkus.kubernetes-service-binding.services.\"services\".name]`\n"
@@ -129,7 +135,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:61
+#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc:70
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.namespace]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus.kubernetes-service-binding.services.-services-.namespace[quarkus.kubernetes-service-binding.services.\"services\".namespace]`\n"
