Update .po files

--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-24 15:04+0000\n"
+"POT-Creation-Date: 2022-01-20 16:09+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1655,7 +1655,6 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:775
-#: upstream/_guides/security-openid-connect-client.adoc:836
 #, no-wrap
 msgid ""
 "@RegisterRestClient\n"
@@ -1790,6 +1789,25 @@ msgstr ""
 "import io.quarkus.oidc.token.propagation.JsonWebToken;\n"
 
 #. type: delimited block -
+#: upstream/_guides/security-openid-connect-client.adoc:836
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@RegisterRestClient\n"
+#| "@AccessToken\n"
+#| "@Path(\"/\")\n"
+#| "public interface ProtectedResourceService {\n"
+msgid ""
+"@RegisterRestClient\n"
+"@JsonWebToken\n"
+"@Path(\"/\")\n"
+"public interface ProtectedResourceService {\n"
+msgstr ""
+"@RegisterRestClient\n"
+"@AccessToken\n"
+"@Path(\"/\")\n"
+"public interface ProtectedResourceService {\n"
+
+#. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:848
 #, no-wrap
 msgid ""
@@ -1803,10 +1821,15 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:853
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@RegisterRestClient\n"
+#| "@RegisterProvider(JsonWebTokenTokenRequestFilter.class)\n"
+#| "@Path(\"/\")\n"
+#| "public interface ProtectedResourceService {\n"
 msgid ""
 "@RegisterRestClient\n"
-"@RegisterProvider(JsonWebTokenTokenRequestFilter.class)\n"
+"@RegisterProvider(JsonWebTokenRequestFilter.class)\n"
 "@Path(\"/\")\n"
 "public interface ProtectedResourceService {\n"
 msgstr ""
