--- a/l10n/po/ja_JP/_guides/kogito-pmml.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-pmml.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-10 17:11+0000\n"
+"POT-Creation-Date: 2022-01-20 16:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -431,7 +431,7 @@ msgid ""
 "curl -X POST http://localhost:8080/LogisticRegressionIrisData/descriptive \\\n"
 "    -H 'content-type: application/json' \\\n"
 "    -H 'accept: application/json' \\\n"
-"    -d '{\"person\": {\"name\":\"Jenny Quark\", \"age\": 15}}'\n"
+"    -d '{ \"Sepal.Length\": 6.9, \"Sepal.Width\": 3.1, \"Petal.Length\": 5.1, \"Petal.Width\": 2.3 }'\n"
 msgstr ""
 
 #. type: delimited block -
