Add machine translation

--- a/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
@@ -40,28 +40,33 @@ msgstr "CLI のインストール"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:19
+#, fuzzy
 msgid "You can install the Quarkus CLI via:"
-msgstr ""
+msgstr "Quarkus CLIは、以下の方法でインストールできます。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:21
+#, fuzzy
 msgid "<<homebrew,Homebrew>>"
-msgstr ""
+msgstr "link:#homebrew[自作]"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:22
+#, fuzzy
 msgid "<<jbang,JBang>>"
-msgstr ""
+msgstr "link:#jbang[JBang]"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:23
+#, fuzzy
 msgid "<<sdkman,SDKMAN!>>"
-msgstr ""
+msgstr "link:#sdkman[SDKMAN!]"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:25
+#, fuzzy
 msgid "More alternatives such as https://chocolatey.org[Chocolatey] will be made available soon."
-msgstr ""
+msgstr "link:https://chocolatey.org[Chocolatey]のような代替品はすぐに利用できるようになるでしょう。"
 
 #. type: Title ===
 #: upstream/_guides/cli-tooling.adoc:27
@@ -72,28 +77,33 @@ msgstr "CLI のインストール"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:30
+#, fuzzy
 msgid "https://brew.sh[Homebrew] is a package manager for macOS (and Linux)."
-msgstr ""
+msgstr "link:https://brew.sh[Homebrew]は、macOS（およびLinux）用のパッケージマネージャーです。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:32
+#, fuzzy
 msgid "You can use Homebrew to install (and update) the Quarkus CLI."
-msgstr ""
+msgstr "Homebrewを使用して、Quarkus CLIをインストール（およびアップデート）することができます。"
 
 #. type: delimited block =
 #: upstream/_guides/cli-tooling.adoc:37
+#, fuzzy
 msgid "Make sure you have a JDK installed before installing the Quarkus CLI.  We haven't added an explicit dependency as we wanted to make sure you could use your preferred JDK version."
-msgstr ""
+msgstr "Quarkus CLIをインストールする前に、JDKがインストールされていることを確認してください。お好みのJDKバージョンを使用できるようにしたかったため、明示的な依存関係は追加していません。"
 
 #. type: delimited block =
 #: upstream/_guides/cli-tooling.adoc:39
+#, fuzzy
 msgid "You can install a JDK with `brew install openjdk` for Java 17 or `brew install openjdk@11` for Java 11."
-msgstr ""
+msgstr "JDKのインストールは、 `brew install openjdk` for Java 17または `brew install openjdk@11` for Java 11で行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:42
+#, fuzzy
 msgid "To install the Quarkus CLI using Homebrew, run the following command:"
-msgstr ""
+msgstr "Homebrewを使ってQuarkus CLIをインストールするには、以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:46
@@ -103,8 +113,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:50
+#, fuzzy
 msgid "It will install the latest version of the Quarkus CLI.  This command can also be used to update the Quarkus CLI."
-msgstr ""
+msgstr "これにより、最新バージョンのQuarkus CLIがインストールされます。このコマンドは、Quarkus CLIのアップデートにも使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:52 upstream/_guides/cli-tooling.adoc:91
@@ -175,8 +186,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:84
+#, fuzzy
 msgid "If you have built Quarkus locally, you can use that version:"
-msgstr ""
+msgstr "ローカルでQuarkusを構築している場合は、そのバージョンを使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:88
@@ -213,23 +225,27 @@ msgstr "CLI のインストール"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:113
+#, fuzzy
 msgid "https://sdkman.io/[SDKMAN!] can be used to manage development environments.  It can manage parallel versions of multiple Software Development Kits on most Unix based systems, making it a very good alternative to keep multiple JDK versions handy."
-msgstr ""
+msgstr "link:https://sdkman.io/[SDKMAN!]は開発環境の管理に使用することができます。ほとんどのUnixベースのシステム上で、複数のSoftware Development Kitの並列バージョンを管理することができ、複数のJDKバージョンを手元に置いておくのに非常に良い選択肢となります。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:115
+#, fuzzy
 msgid "With SDKMAN!, you can also install popular Java tools, including the Quarkus CLI."
-msgstr ""
+msgstr "SDKMAN！では、Quarkus CLIを含む人気のあるJavaツールをインストールすることもできます。"
 
 #. type: delimited block =
 #: upstream/_guides/cli-tooling.adoc:119
+#, fuzzy
 msgid "Make sure you have https://sdkman.io/jdks[a JDK installed] before installing the Quarkus CLI."
-msgstr ""
+msgstr "Quarkus CLIをインストールする前に、 link:https://sdkman.io/jdks[JDKがインストールされ]ていることを確認してください。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:122
+#, fuzzy
 msgid "To install the Quarkus CLI using SDKMAN!, just run:"
-msgstr ""
+msgstr "SDKMAN！を使ってQuarkus CLIをインストールするには、次のように実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:126
@@ -239,8 +255,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:130
+#, fuzzy
 msgid "It will install the latest version of the Quarkus CLI.  SDKMAN! will let you know when new versions are available so updates will be straightforward."
-msgstr ""
+msgstr "Quarkus CLIの最新バージョンがインストールされます。SDKMAN! は、新しいバージョンが利用可能になったときにお知らせしますので、アップデートが簡単にできます。"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:139
