--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -117,14 +117,15 @@ msgstr "コンテキスト"
 
 #. type: Block title
 #: upstream/_guides/command-mode-reference.adoc:54
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Got a `ContextNotActiveException`?"
-msgstr ""
+msgstr "Got a `ContextNotActiveException`?"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:59
+#, fuzzy
 msgid "A command mode application (like a CLI) is a bit different from say a HTTP service, there is a single call from the command line.  So the notion of _request_ let alone multiple requests does not exist per se.  Therefore request scope is not the default."
-msgstr ""
+msgstr "コマンドモードのアプリケーション（CLIなど）は、例えばHTTPサービスとは少し異なり、コマンドラインからの呼び出しは1回だけです。そのため、複数のリクエストはおろか、 _リクエスト_という概念自体が存在しません。したがって、リクエストスコープはデフォルトではありません。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:62
