--- a/l10n/po/ja_JP/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.6.3.Final released - Maintenance release'\n"
@@ -34,16 +34,25 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.6.3.Final released - Maintenance release'\n"
+"date: 2022-01-20\n"
+"tags: release\n"
+"synopsis: 2.6.3.Finalは、2.6リリーストレインの3回目のメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:11
+#, fuzzy
 msgid "We just released Quarkus 2.6.3.Final with a new round of bugfixes and documentation improvements."
-msgstr ""
+msgstr "Quarkus 2.6.3.Finalがリリースされました。新しいバグフィックスとドキュメントの改善が行われています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:13
+#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.6."
-msgstr ""
+msgstr "すでに2.6をお使いの方も安心してアップグレードできます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:14
@@ -58,8 +67,9 @@ msgstr "まだ2.6を使用していない場合は、 link:https://github.com/qu
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.6.3.Final[the full changelog of 2.6.3.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.3.Final[2.6.3.Finalの全変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:20
