Add some translations

--- a/l10n/po/ja_JP/_guides/amazon-ssm.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-ssm.adoc.po
@@ -171,7 +171,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/amazon-ssm.adoc:67
 #, fuzzy
 msgid "The solution is located in the `amazon-ssm-quickstart` {quickstarts-tree-url}/amazon-ssm-quickstart[directory]."
-msgstr "このソリューションは `amazon-ssm-quickstart` {quickstarts-tree-url}/amazon-ssm-quickstart[directory]にあります。"
+msgstr "このソリューションは `amazon-ssm-quickstart` {quickstarts-tree-url}/amazon-ssm-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-ssm.adoc:68
