--- a/l10n/po/ja_JP/_guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_guides/context-propagation.adoc.po
@@ -74,7 +74,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #: upstream/_guides/context-propagation.adoc:34
 #, fuzzy
 msgid "The solution is located in the `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]."
-msgstr "このソリューションは `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]にあります。"
+msgstr "このソリューションは `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:35
