--- a/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
@@ -57,7 +57,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #: upstream/_guides/grpc-getting-started.adoc:24
 #, fuzzy
 msgid "The solution is located in the `grpc-plain-text-quickstart` {quickstarts-tree-url}/grpc-plain-text-quickstart[directory]."
-msgstr "このソリューションは `grpc-plain-text-quickstart` {quickstarts-tree-url}/grpc-plain-text-quickstart[directory] にあります。"
+msgstr "このソリューションは `grpc-plain-text-quickstart` {quickstarts-tree-url}/grpc-plain-text-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/grpc-getting-started.adoc:25
