--- a/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
@@ -54,7 +54,7 @@ msgstr "アプリケーションを作成するには、以下のセクション
 #: upstream/_guides/infinispan-client.adoc:23
 #, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}` or download an {quickstarts-archive-url}[archive].  Locate the solution in the `infinispan-client-quickstart` {quickstarts-tree-url}/infinispan-client-quickstart[directory]."
-msgstr "Git リポジトリをクローンします。 `git clone {quickstarts-clone-url}` または {quickstarts-archive-url}[archive]をダウンロードします。 `infinispan-client-quickstart` {quickstarts-tree-url}/infinispan-client-quickstart[directory]でソリューションを探します。"
+msgstr "Git リポジトリをクローンします。 `git clone {quickstarts-clone-url}` または {quickstarts-archive-url}[archive]をダウンロードします。 `infinispan-client-quickstart` {quickstarts-tree-url}/infinispan-client-quickstart[ディレクトリ]でソリューションを探します。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:24
