--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -126,7 +126,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:45
 msgid "The solution is located in the `mailer-quickstart` {quickstarts-tree-url}/mailer-quickstart[directory]."
-msgstr "このソリューションは `mailer-quickstart` {quickstarts-tree-url}/mailer-quickstart[directory]にあります。"
+msgstr "このソリューションは `mailer-quickstart` {quickstarts-tree-url}/mailer-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:46
