--- a/l10n/po/ja_JP/_guides/opentelemetry.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentelemetry.adoc.po
@@ -96,7 +96,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/opentelemetry.adoc:37
 msgid "The solution is located in the `opentelemetry-quickstart` {quickstarts-tree-url}/opentelemetry-quickstart[directory]."
-msgstr "このソリューションは、 `opentelemetry-quickstart` {quickstarts-tree-url}/opentelemetry-quickstart[directory]にあります。"
+msgstr "このソリューションは、 `opentelemetry-quickstart` {quickstarts-tree-url}/opentelemetry-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/opentelemetry.adoc:38
