--- a/l10n/po/ja_JP/_guides/reactive-messaging-websocket.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging-websocket.adoc.po
@@ -125,7 +125,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #: upstream/_guides/reactive-messaging-websocket.adoc:44
 #, fuzzy
 msgid "The solution is located in the `reactive-messaging-websockets-quickstart` {quickstarts-tree-url}/reactive-messaging-websockets-quickstart[directory]."
-msgstr "このソリューションは `reactive-messaging-websockets-quickstart` {quickstarts-tree-url}/reactive-messaging-websockets-quickstart[directory]にあります。"
+msgstr "このソリューションは `reactive-messaging-websockets-quickstart` {quickstarts-tree-url}/reactive-messaging-websockets-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:45
