--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache-kotlin.adoc.po
@@ -7,37 +7,33 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:05+0000\n"
-"PO-Revision-Date: 2021-04-21 20:40+0900\n"
+"PO-Revision-Date: 2022-01-21 22:28+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: om\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Simplified Hibernate ORM with Panache and Kotlin"
+#, no-wrap
 msgid "Simplified Hibernate ORM with Panache and Kotlin"
-msgstr "PanacheとKotlinによるシンプルなHibernate ORM"
+msgstr "シンプルになったHibernate ORM with PanacheとKotlin"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:15
-#, fuzzy
-#| msgid "Hibernate ORM is the de facto standard JPA implementation and is well-known in the Java ecosystem.  Panache offers a new layer atop this familiar framework.  This guide will not dive in to the specifics of either as those are already covered in the link:hibernate-orm-panache[Panache guide].  In this guide, we'll cover the Kotlin specific changes needed to use Panache in your Kotlin-based Quarkus applications."
 msgid "Hibernate ORM is the de facto standard JPA implementation and is well-known in the Java ecosystem. Hibernate ORM with Panache offers a new layer atop this familiar framework.  This guide will not dive in to the specifics of either as those are already covered in the xref:hibernate-orm-panache.adoc[Hibernate ORM with Panache guide].  In this guide, we'll cover the Kotlin specific changes needed to use Hibernate ORM with Panache in your Kotlin-based Quarkus applications."
-msgstr "Hibernate ORMはデファクトスタンダードなJPA実装であり、Javaエコシステムではよく知られています。Panacheはこのお馴染みのフレームワークの上に新しいレイヤーを提供します。これらの詳細については link:hibernate-orm-panache[Panacheのガイド] ですでに説明しているので、このガイドでは触れません。このガイドでは、KotlinベースのQuarkusアプリケーションでPanacheを使用するために必要なKotlin固有の変更点について説明します。"
+msgstr "Hibernate ORMはデファクトスタンダードなJPA実装であり、Javaエコシステムではよく知られています。Hibernate ORM with Panacheはこのお馴染みのフレームワークの上に新しいレイヤーを提供します。これらの詳細については link:hibernate-orm-panache[Hibernate ORM with Panacheのガイド] ですでに説明しているので、このガイドでは触れません。このガイドでは、KotlinベースのQuarkusアプリケーションでHibernate ORM with Panacheを使用するために必要なKotlin固有の変更点について説明します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:17
-#, fuzzy
 msgid "When using the kotlin version of Hibernate ORM with Panache, note that the `PanacheEntity`, `PanacheQuery` and `PanacheRepository` are in a different package: `io.quarkus.hibernate.orm.panache.kotlin`."
-msgstr "kotlin版のHibernate ORMをPanacheで使用する場合、 `PanacheEntity`, `PanacheQuery`, `PanacheRepository` は、 `io.quarkus.hibernate.orm.panache.kotlin` という別のパッケージになっていることに注意してください。"
+msgstr "kotlin版のHibernate ORM with Panacheを使用する場合、 `PanacheEntity`, `PanacheQuery`, `PanacheRepository` は、 `io.quarkus.hibernate.orm.panache.kotlin` という別のパッケージになっていることに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:18
@@ -47,10 +43,8 @@ msgstr "最初に:例"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:23
-#, fuzzy
-#| msgid "As we saw in the Panache guide, Panache allows us to extend the functionality in our entities and repositories (also known as DAOs) with some automatically provided functionality.  When using Kotlin, the approach is very similar to what we see in the Java version with a slight change or two.  To Panache-enable your entity, you would define it something like:"
 msgid "As we saw in the Hibernate with Panache guide, it allows us to extend the functionality in our entities and repositories (also known as DAOs) with some automatically provided functionality.  When using Kotlin, the approach is very similar to what we see in the Java version with a slight change or two.  To Panache-enable your entity, you would define it something like:"
-msgstr "Panacheガイドで見たように、Panacheを使うと、エンティティーやリポジトリ(DAOとも呼ばれます)の機能を自動で提供される機能で拡張することができます。Kotlin を使用する場合のアプローチは Java 版と非常によく似ていますが、若干の変更点があります。エンティティーを Panache で有効にするには、次のように定義します。"
+msgstr "Hibernate ORM with Panacheガイドで見たように、Hibernate ORM with Panacheを使うと、エンティティーやリポジトリ(DAOとも呼ばれます)の機能を自動で提供される機能で拡張することができます。Kotlin を使用する場合のアプローチは Java 版と非常によく似ていますが、若干の変更点があります。エンティティーを Panache で有効にするには、次のように定義します。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:32
@@ -114,41 +108,35 @@ msgstr "Kotlin版では、単純に link:https://www.martinfowler.com/eaaCatalog
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:68
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:72
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
 msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:74
-#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive] をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:76
-#, fuzzy
 msgid "The solution is located in the `hibernate-orm-panache-kotlin-quickstart` {quickstarts-tree-url}/hibernate-orm-panache-kotlin-quickstart[directory]."
-msgstr "このソリューションは `hibernate-orm-panache-kotlin-quickstart` {quickstarts-tree-url}/hibernate-orm-panache-kotlin-quickstart[directory]にあります。"
+msgstr "このソリューションは `hibernate-orm-panache-kotlin-quickstart` {quickstarts-tree-url}/hibernate-orm-panache-kotlin-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:78
-#, fuzzy, no-wrap
-#| msgid "Setting up and configuring Hibernate ORM with Panache"
+#, no-wrap
 msgid "Setting up and configuring Hibernate ORM with Panache and Kotlin"
-msgstr "Hibernate ORM with Panacheのセットアップと設定"
+msgstr "Hibernate ORM with PanacheとKotlinのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:83
-#, fuzzy
-#| msgid "To get started using Panache with Kotlin, you can, generally, follow the steps laid out in the Java tutorial.  The biggest change to configuring your project is the Quarkus artifact to include.  You can, of course, keep the Java version if you need but if all you need are the Kotlin APIs then include the following dependency instead:"
 msgid "To get started using Hibernate ORM with Panache and Kotlin, you can, generally, follow the steps laid out in the Java tutorial. The biggest change to configuring your project is the Quarkus artifact to include.  You can, of course, keep the Java version if you need but if all you need are the Kotlin APIs then include the following dependency instead:"
-msgstr "KotlinでPanacheを使い始めるには、一般的には、Javaチュートリアルで説明されている手順に従います。プロジェクトを設定する上で最も大きな変更点は、インクルードするQuarkusのアーティファクトです。もちろん、必要であればJavaバージョンのままでも構いませんが、KotlinのAPIだけが必要な場合は、代わりに以下の依存関係をインクルードしてください。"
+msgstr "KotlinでHibernate ORM with Panacheを使い始めるには、一般的には、Javaチュートリアルで説明されている手順に従います。プロジェクトを設定する上で最も大きな変更点は、インクルードするQuarkusのアーティファクトです。もちろん、必要であればJavaバージョンのままでも構いませんが、KotlinのAPIだけが必要な場合は、代わりに以下の依存関係をインクルードしてください。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:93
@@ -387,10 +375,8 @@ msgstr "`stream` メソッドが動作するにはトランザクションが必
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:212
-#, fuzzy
-#| msgid "For more examples, please consult the link:hibernate-orm-panache[Java version] for complete details.  Both APIs are the same and work identically except for some Kotlin-specific tweaks to make things feel more natural to Kotlin developers.  These tweaks include things like better use of nullability and the lack of `Optional` on API methods."
 msgid "For more examples, please consult the xref:hibernate-orm-panache.adoc[Java version] for complete details.  Both APIs are the same and work identically except for some Kotlin-specific tweaks to make things feel more natural to Kotlin developers.  These tweaks include things like better use of nullability and the lack of `Optional` on API methods."
-msgstr "より多くの例については、 link:hibernate-orm-panache[Java 版] を参照してください。どちらの API も同じで、Kotlin 開発者がより自然に感じられるように Kotlin 固有の調整が行われている点を除いては同じように動作します。これらの調整には、nullability の使用方法の改善や、API メソッドの `Optional` がないことなどが含まれます。"
+msgstr "更なるサンプルについては、 link:hibernate-orm-panache[Java 版] を参照してください。どちらの API も同じで、Kotlin 開発者がより自然に感じられるように Kotlin 固有の調整が行われている点を除いては同じように動作します。これらの調整には、nullability の使用方法の改善や、API メソッドの `Optional` がないことなどが含まれます。"
 
 #~ msgid "The rest of the documentation show usages based on the active record pattern only, but keep in mind that they can be performed with the repository pattern as well.  The repository pattern examples have been omitted for brevity."
 #~ msgstr "残りのドキュメントでは、アクティブレコードパターンに基づく使用法のみを示していますが、リポジトリパターンでも実行できることを覚えておいてください。リポジトリパターンの例は簡潔にするために省略しています。"
