--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
@@ -3,43 +3,41 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-01-21 22:32+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: om\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/hibernate-orm-panache.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Simplified Hibernate ORM with Panache"
-msgstr "Quarkus - Panacheを使用した簡素化されたHibernate ORM"
+msgstr "シンプルになったHibernate ORM with Panache"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:14
-#, fuzzy
 msgid "Hibernate ORM is the de facto JPA implementation and offers you the full breadth of an Object Relational Mapper.  It makes complex mappings possible, but it does not make simple and common mappings trivial.  Hibernate ORM with Panache focuses on making your entities trivial and fun to write in Quarkus."
-msgstr "Hibernate ORMは事実上のJPA実装であり、オブジェクトリレーショナルマッパーの全幅を提供します。複雑なマッピングを可能にしますが、単純で一般的なマッピングをつまらなくするものではありません。Hibernate ORM with Panacheは、エンティティーを些細なことではなく、Quarkusで書くのが楽しくなるようにすることに焦点を当てています。"
+msgstr "Hibernate ORMは事実上のJPA実装であり、オブジェクトリレーショナルマッパーの全幅を提供します。複雑なマッピングを可能にしますが、単純で一般的なマッピングを些細なことにするものではありません。Hibernate ORM with Panacheは、エンティティーを些細なことではなく、Quarkusで書くのが楽しくなるようにすることに焦点を当てています。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache.adoc:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "First: an example"
 msgstr "最初に:一例"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:18
-#, fuzzy
 msgid "What we're doing in Panache is allow you to write your Hibernate ORM entities like this:"
 msgstr "Panacheでやっていることは、Hibernate ORMエンティティーをこのように書けるようにすることです。"
 
@@ -89,21 +87,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:43
-#, fuzzy
 msgid "You have noticed how much more compact and readable the code is? Does this look interesting? Read on!"
 msgstr "コードがどれだけコンパクトで読みやすくなっているかお気づきですか?面白いと思いませんか?読んでみてください。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:45
-#, fuzzy
 msgid "the `list()` method might be surprising at first. It takes fragments of HQL (JP-QL) queries and contextualizes the rest. That makes for very concise but yet readable code."
-msgstr "`list()` メソッドは、最初は驚くかもしれません。これは HQL (JP-QL) クエリの断片を取り、残りの部分をコンテキスト化します。これにより、非常に簡潔でありながら読みやすいコードになっています。"
+msgstr "`list()` メソッドには、最初は驚くかもしれません。これは HQL (JP-QL) クエリの断片を取り、残りの部分をコンテキスト化します。これにより、非常に簡潔でありながら読みやすいコードになっています。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:48
-#, fuzzy
 msgid "what was described above is essentially the link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[active record pattern], sometimes just called the entity pattern.  Hibernate with Panache also allows for the use of the more classical link:https://martinfowler.com/eaaCatalog/repository.html[repository pattern] via `PanacheRepository`."
-msgstr "上記で説明したものは、基本的には link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[アクティブレコードパターン] であり、エンティティーパターンと呼ばれることもあります。Hibernate with Panache は、 `PanacheRepository` を通じて、より古典的な link:https://martinfowler.com/eaaCatalog/repository.html[リポジトリパターンを] 使用することもできます。"
+msgstr "上記で説明したものは、基本的には link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[アクティブレコードパターン] であり、エンティティーパターンと呼ばれることもあります。Hibernate with Panache は、 `PanacheRepository` を通じて、より古典的な link:https://martinfowler.com/eaaCatalog/repository.html[リポジトリパターン] を使用することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache.adoc:49
@@ -123,7 +118,6 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:57
-#, fuzzy
 msgid "The solution is located in the `hibernate-orm-panache-quickstart` {quickstarts-tree-url}/hibernate-orm-panache-quickstart[directory]."
 msgstr "ソリューションは `hibernate-orm-panache-quickstart` {quickstarts-tree-url}/hibernate-orm-panache-quickstart[ディレクトリ] にあります。"
 
