--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -49,7 +49,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:23
 msgid "The solution is located in the `hibernate-orm-quickstart` {quickstarts-tree-url}/hibernate-orm-quickstart[directory]."
-msgstr "このソリューションは `hibernate-orm-quickstart` {quickstarts-tree-url}/hibernate-orm-quickstart[directory]にあります。"
+msgstr "このソリューションは `hibernate-orm-quickstart` {quickstarts-tree-url}/hibernate-orm-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm.adoc:24
