--- a/l10n/po/ja_JP/_guides/hibernate-reactive-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-reactive-panache.adoc.po
@@ -127,7 +127,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #: upstream/_guides/hibernate-reactive-panache.adoc:58
 #, fuzzy
 msgid "The solution is located in the `hibernate-reactive-panache-quickstart` {quickstarts-tree-url}/hibernate-reactive-panache-quickstart[directory]."
-msgstr "ソリューションは `hibernate-reactive-panache-quickstart` {quickstarts-tree-url}/hibernate-reactive-panache-quickstart[directory]にあります。"
+msgstr "ソリューションは `hibernate-reactive-panache-quickstart` {quickstarts-tree-url}/hibernate-reactive-panache-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-reactive-panache.adoc:60
