--- a/l10n/po/ja_JP/_guides/kafka-reactive-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-reactive-getting-started.adoc.po
@@ -149,7 +149,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #: upstream/_guides/kafka-reactive-getting-started.adoc:49
 #, fuzzy
 msgid "The solution is located in the `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[directory]."
-msgstr "このソリューションは、 `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[directory]にあります。"
+msgstr "このソリューションは、 `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-reactive-getting-started.adoc:50
