--- a/l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po
@@ -54,7 +54,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:25
 msgid "The solution is located in the `liquibase-mongodb-quickstart` {quickstarts-tree-url}/liquibase-mongodb-quickstart[directory]."
-msgstr "ソリューションは、 `liquibase-mongodb-quickstart` {quickstarts-tree-url}/liquibase-mongodb-quickstart[directory]にあります。"
+msgstr "ソリューションは、 `liquibase-mongodb-quickstart` {quickstarts-tree-url}/liquibase-mongodb-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase-mongodb.adoc:26
