--- a/l10n/po/ja_JP/_guides/liquibase.adoc.po
+++ b/l10n/po/ja_JP/_guides/liquibase.adoc.po
@@ -55,7 +55,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:24
 msgid "The solution is located in the `liquibase-quickstart` {quickstarts-tree-url}/liquibase-quickstart[directory]."
-msgstr "ソリューションは `liquibase-quickstart` {quickstarts-tree-url}/liquibase-quickstart[directory]にあります。"
+msgstr "ソリューションは `liquibase-quickstart` {quickstarts-tree-url}/liquibase-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase.adoc:25
