--- a/l10n/po/ja_JP/_guides/rabbitmq.adoc.po
+++ b/l10n/po/ja_JP/_guides/rabbitmq.adoc.po
@@ -155,7 +155,7 @@ msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone
 #: upstream/_guides/rabbitmq.adoc:52
 #, fuzzy
 msgid "The solution is located in the `rabbitmq-quickstart` {quickstarts-tree-url}/rabbitmq-quickstart[directory]."
-msgstr "このソリューションは `rabbitmq-quickstart` {quickstarts-tree-url}/rabbitmq-quickstart[directory]にあります。"
+msgstr "このソリューションは `rabbitmq-quickstart` {quickstarts-tree-url}/rabbitmq-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/rabbitmq.adoc:53
