--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -90,7 +90,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/rest-client-reactive.adoc:33
 #, fuzzy
 msgid "The solution is located in the `rest-client-reactive-quickstart` {quickstarts-tree-url}/rest-client-reactive-quickstart[directory]."
-msgstr "このソリューションは、 `rest-client-reactive-quickstart` {quickstarts-tree-url}/rest-client-reactive-quickstart[directory]にあります。"
+msgstr "このソリューションは、 `rest-client-reactive-quickstart` {quickstarts-tree-url}/rest-client-reactive-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-reactive.adoc:34
