Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-24 02:19+0000\n"
+"POT-Creation-Date: 2022-01-22 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -397,7 +397,7 @@ msgstr ""
 msgid ""
 "import org.acme.kafka.quarkus.Movie;\n"
 "import org.eclipse.microprofile.reactive.messaging.Channel;\n"
-"import org.jboss.resteasy.reactive.RestSseElementType;\n"
+"import org.jboss.resteasy.reactive.RestStreamElementType;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -429,7 +429,7 @@ msgstr ""
 msgid ""
 "    @GET\n"
 "    @Produces(MediaType.SERVER_SENT_EVENTS)\n"
-"    @RestSseElementType(MediaType.TEXT_PLAIN)\n"
+"    @RestStreamElementType(MediaType.TEXT_PLAIN)\n"
 "    public Multi<String> stream() {\n"
 "        return movies.map(movie -> String.format(\"'%s' from %s\", movie.getTitle(), movie.getYear()));\n"
 "    }\n"
