--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-11 02:17+0000\n"
+"POT-Creation-Date: 2022-01-22 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1506,7 +1506,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:712
-msgid "If you want to stream JSON objects in your response, you can use https://html.spec.whatwg.org/multipage/server-sent-events.html[Server-Sent Events] by just annotating your endpoint method with link:{jaxrsapi}/javax/ws/rs/Produces.html[`@Produces(MediaType.SERVER_SENT_EVENTS)`] and specifying that each element should be <<json,serialised to JSON>> with `@RestSseElementType(MediaType.APPLICATION_JSON)`."
+msgid "If you want to stream JSON objects in your response, you can use https://html.spec.whatwg.org/multipage/server-sent-events.html[Server-Sent Events] by just annotating your endpoint method with link:{jaxrsapi}/javax/ws/rs/Produces.html[`@Produces(MediaType.SERVER_SENT_EVENTS)`] and specifying that each element should be <<json,serialised to JSON>> with `@RestStreamElementType(MediaType.APPLICATION_JSON)`."
 msgstr ""
 
 #. type: delimited block -
@@ -1523,7 +1523,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:724
 #, no-wrap
-msgid "import org.jboss.resteasy.reactive.RestSseElementType;\n"
+msgid "import org.jboss.resteasy.reactive.RestStreamElementType;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -1558,7 +1558,7 @@ msgid ""
 "    // Send the stream over SSE\n"
 "    @Produces(MediaType.SERVER_SENT_EVENTS)\n"
 "    // Each element will be sent as JSON\n"
-"    @RestSseElementType(MediaType.APPLICATION_JSON)\n"
+"    @RestStreamElementType(MediaType.APPLICATION_JSON)\n"
 "    public Multi<Book> stream() {\n"
 "        return books;\n"
 "    }\n"
