--- a/l10n/po/ja_JP/_posts/2021-12-16-quarkus-newsletter-15.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-16-quarkus-newsletter-15.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-01-13 22:04+0000\n"
+"POT-Creation-Date: 2022-01-24 10:07+0000\n"
 "PO-Revision-Date: 2022-01-17 16:03+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -52,7 +52,9 @@ msgstr "12月のニュースレターが発行されました。今月は、Quar
 
 #. type: Plain text
 #: upstream/_posts/2021-12-16-quarkus-newsletter-15.adoc:15
-msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #15]!"
+#, fuzzy
+#| msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #15]!"
+msgid "Check out https://quarkus.io/newsletter/15/[Newsletter #15]!"
 msgstr "link:https://quarkus.io/newsletter/14/[Newsletter 15号]をご覧ください。"
 
 #. type: Plain text
