--- a/l10n/po/ja_JP/_posts/2022-01-13-quarkus-newsletter-16.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-13-quarkus-newsletter-16.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-01-13 22:04+0000\n"
+"POT-Creation-Date: 2022-01-24 10:07+0000\n"
 "PO-Revision-Date: 2022-01-17 14:31+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -51,7 +51,9 @@ msgstr "1月のニュースレターが発行されました!今月は、2021年
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-newsletter-16.adoc:15
-msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #16]!"
+#, fuzzy
+#| msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #16]!"
+msgid "Check out https://quarkus.io/newsletter/16/[Newsletter #16]!"
 msgstr "link:https://quarkus.io/newsletter/14/[ニュースレター #16]をご覧ください。"
 
 #. type: Plain text
